[tool.poetry]
name = "hf-lm-train-template"
version = "0.1.0"
description = ""
authors = ["Nam-SW <nsw0311@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
hydra-core = "1.3.2"

torch = {url="https://download.pytorch.org/whl/cu118/torch-2.1.0%2Bcu118-cp39-cp39-linux_x86_64.whl"}

transformers = "4.34.1"
datasets = "2.14.6"
tokenizers = "0.14.1"

bitsandbytes = "0.41.1"
peft = "0.5.0"
accelerate = "0.24.0"

wandb = "^0.15.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
